# BroadwAI-TTS-Studio

./: .gitignore  AGENTS.md  README.md  Requerimiento.md  nuxt.config.ts  package.json
.ai/: README.md
.ai/prompts/: deepseek-structure.md
app/: app.vue
app/components/: AGENTS.md
app/composables/: AGENTS.md  useAssets.ts  useCharacters.ts  useDialogueNodes.ts  useImport.ts  useProjects.ts  useScenes.ts  useSettings.ts  useTauri.ts  useTimeline.ts  useTts.ts
app/layouts/: default.vue
app/pages/: AGENTS.md  index.vue  (+1 more)
docs/: architecture.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  error.rs  lib.rs  main.rs  paths.rs  state.rs
src-tauri/src/commands/: AGENTS.md  assets.rs  character.rs  dialogue.rs  import.rs  mod.rs  project.rs  scene.rs  settings.rs  timeline.rs  tts.rs
src-tauri/src/entities/: AGENTS.md  app_setting.rs  audio_asset.rs  character.rs  character_alias.rs  dialogue_node.rs  dialogue_tts_tag.rs  generated_audio.rs  mod.rs  project.rs  raw_import.rs  render_job.rs  scene.rs  timeline_event.rs  timeline_track.rs
src-tauri/src/migrations/: AGENTS.md  m20260515_000001_create_projects.rs  m20260515_000002_create_scenes.rs  m20260515_000003_create_characters.rs  m20260515_000004_create_dialogue_nodes.rs  m20260515_000005_create_audio_tables.rs  m20260515_000006_create_timeline_tables.rs  m20260515_000007_create_render_jobs.rs  m20260515_000008_create_app_settings.rs  mod.rs
src-tauri/src/services/: AGENTS.md  asset_service.rs  audio_mixer.rs  character_service.rs  credential_service.rs  deepseek_service.rs  dialogue_service.rs  gemini_tts_service.rs  import_service.rs  mod.rs  project_io_service.rs  project_service.rs  render_planner.rs  scene_mix_service.rs  scene_service.rs  timeline_service.rs  tts_optimization_service.rs  tts_service.rs
(+36 files in other folders)
