[package]
name = "broadwai-tts-studio"
version = "0.1.0"
description = "BroadwAI TTS Studio — editor local de escenas TTS multi-personaje"
authors = ["BroadwAI"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "broadwai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

# Serde / errores
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Fechas / IDs
chrono = { version = "0.4", features = ["serde", "clock"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Persistencia
sea-orm = { version = "1", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-uuid",
] }
sea-orm-migration = { version = "1", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "with-chrono",
    "with-uuid",
] }

# Credenciales seguras
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }

# HTTP para DeepSeek / Gemini
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# Hashing para caché de audio
sha2 = "0.10"
hex = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Audio (mezcla local Rust)
symphonia = { version = "0.5", features = ["all-codecs", "all-formats"] }
rubato = "0.16"
hound = "3.5"

# Utilidades
once_cell = "1"
dirs = "5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
